--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-/.idea/go-submodules.iml
-/.idea/google-java-format.xml
-/.idea/sonarlint/issuestore/index.pb
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/runConfigurations.xml
-/.idea/vcs.xml
+/.idea/**
